2008-07-17  Edward Hervey  <edward.hervey@collabora.co.uk>

	* sys/osxvideo/osxvideosink.m:
	Fix minor build issues on macosx.
	Fixes #543054

2008-07-17  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* configure.ac::
	* ext/taglib/Makefile.am::
	  Only use -Wno-attributes (which is there to work around a
	  bug in the taglib 1.5 headers) if the c++ compiler actually
	  supports it (#543255).

2008-07-17  Tim-Philipp Müller  <tim.muller at collabora co uk>

	Patch by: Benoit Fouet <benoit.fouet purplelabs com>

	* sys/v4l2/gstv4l2src.c: (gst_v4l2src_negotiate):
	  Avoid compiler warning by initialising variable to NULL (#543259).

2008-07-14  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/debug/gsttaginject.c: (gst_tag_inject_start):
	Don't pass NULL taglists to gst_tag_list_is_empty().

2008-07-14  Sebastian Dröge  <slomo@circular-chaos.org>

	* tests/check/elements/cmmldec.c: (GST_START_TEST):
	* tests/check/elements/rtp-payloading.c: (rtp_pipeline_create),
	(rtp_pipeline_run):
	* tests/check/elements/souphttpsrc.c: (souphttpsrc_suite):
	Don't use declarations after statements.

2008-07-14  Mark Nauwelaerts  <mark.nauwelaerts@collabora.co.uk>

	* ext/jpeg/gstjpegdec.c:
	Align documentation with reality.

2008-07-14  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/udp/gstudpnetutils.c:
	EAI_ADDRFAMILY was obsoleted in BSD at some point. Define it to the
	old value (1) if it's not defined which should not cause any problems
	as we're using it internal only anyway.

2008-07-14  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Alessandro Decina <alessandro at nnva dot org>

	* gst/avi/gstavidemux.c: (gst_avi_demux_riff_parse_vprp):
	Fix build of avidemux on big endian architectures.

2008-07-10  Mark Nauwelaerts  <mark.nauwelaerts@collabora.co.uk>

	Patch by: Thiago Sousa Santos <thiagoss at lcc dot ufcg dot edu dot br>

	* gst/qtdemux/qtdemux.c: (qtdemux_audio_caps):